- [x]	Make logo bigger - [x]	When you scroll down and up, the transparent header remains. Please remove the transparent header when users scroll up to the top page. - [x]	Review the contents under ‘Our commitment to quality ensures your peace of mind’ some words need a space between them. - [x]	Our materials are represented in hundreds of products across multiple markets in Nigeria: align to centre - [x]	Our materials are represented in hundreds of products across multiple markets in Nigeria: add padding between image and text like other neighbouring cards - [x]	We are enabling businesses like yours for success: add padding between image and text like other neighbouring cards - [x]	Our core values: redesign this card to fit new style based on the mobile version design - [x]	Card buttons, size, and padding: keep the existing buttons sytle. Ignore the style on UX design - [x]	Which of our product vertical is relevant for you?: reduce the size of the cards in this section. It should be about the size of the cards in ‘Our commitment to quality ensures your peace of mind’ section. - [x]   resize the buttons design to the style you have been working with. - [x]	Do you need to speak with one of our: the whatsapp icon should be smaller. - [x]   the card’s height should be shorter if possible/necessary to give the best visual appeal. - [x]	Testimonial section: effect the best possible solution that has been proposed. - [ ]	LinkedIn post: connect to our linkedIn page to give real time update on 3 most recent posts. - [x]	Footer: include icons and copyright statement. Take care that the background logo and composite appeal are as good and visible as what is on the design.
Mobile version
- [x]	Implement everything mentioned on desktop version
- [x]	Which of our product vertical is relevant for you?: the whatsapp icon and its entire card should come last in this segment.
- [x]	Include X button on the hamburger menu to enable user know how to exit the menu. Otherwise it would be

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,6 +9,7 @@ body {
 :root {
 	--oex-gray: #e6e6e6;
 	--oex-orange: #ff6600;
+	--oex-yellow: #edbf37;
 	--oex-orange-dark: #e74803;
 	--border-radius: 12px;
 	--text-colour-light: white;
